@@ -1,3 +1,8 @@
+2015-02-10  c.hetherington  <cth@carlh.net>
+
+	* Default to no colour conversion for
+	JPEG2000 and DCP content (#445).
+
 2015-02-06  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.40 released.
